--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,106 @@
+appdirs==1.4.4
+beautifulsoup4==4.12.3
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+cssselect==1.2.0
+docker-pycreds==0.4.0
+filelock==3.13.1
+fsspec==2024.2.0
+gitdb==4.0.11
+GitPython==3.1.42
+google-ai-generativelanguage==0.1.0
+google-api-core==2.17.1
+google-auth==2.28.2
+googleapis-common-protos==1.63.0
+goose3==3.1.9
+grpcio==1.62.1
+grpcio-status==1.62.1
+huggingface-hub==0.21.1
+idna==3.6
+jieba==0.42.1
+Jinja2==3.1.3
+joblib==1.3.2
+langdetect==1.0.9
+lxml==5.1.0
+MarkupSafe==2.1.5
+mpmath==1.3.0
+appdirs==1.4.4
+beautifulsoup4==4.12.3
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+cssselect==1.2.0
+docker-pycreds==0.4.0
+filelock==3.13.1
+fsspec==2024.2.0
+gitdb==4.0.11
+GitPython==3.1.42
+google-ai-generativelanguage==0.1.0
+google-api-core==2.17.1
+google-auth==2.28.2
+googleapis-common-protos==1.63.0
+goose3==3.1.9
+grpcio==1.62.1
+grpcio-status==1.62.1
+huggingface-hub==0.21.1
+idna==3.6
+jieba==0.42.1
+Jinja2==3.1.3
+joblib==1.3.2
+langdetect==1.0.9
+lxml==5.1.0
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.1
+nltk==3.8.1
 numpy==1.22.3
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
+packaging==23.2
 pandas==1.4.3
 Pillow==7.1.2
-scikit_learn==1.1.1
+proto-plus==1.23.0
+protobuf==4.25.3
+psutil==5.9.8
+pyahocorasick==2.0.0
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+python-dateutil==2.8.2
+pytz==2024.1
+PyYAML==6.0.1
+regex==2023.12.25
+requests==2.31.0
+rsa==4.9
+scikit-learn==1.1.1
+scipy==1.10.1
+sentry-sdk==1.40.6
+setproctitle==1.3.3
+six==1.16.0
+smmap==5.0.1
+soupsieve==2.5
+sympy==1.12
+threadpoolctl==3.3.0
+tokenizers==0.12.1
+torch==2.2.1
+torchaudio==2.2.1
+torchvision==0.17.1
 tqdm==4.64.0
 transformers==4.21.1
+triton==2.2.0
+typing-extensions==4.10.0
+Unidecode==1.3.8
+urllib3==2.2.1
+wandb==0.16.3
